# oidc-tester-ubuntu

./: .gitignore  CMakeLists.txt  FEATURE_COMPARISON.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  run.sh
.github/workflows/: ci-build.yml
src/: JWTDecoder.cpp  JWTDecoder.h  MainWindow.cpp  MainWindow.h  OIDCManager.cpp  OIDCManager.h  main.cpp
